# react-native-camera

./: .eslintrc  .gitignore  .npmignore  README.md  package.json
harmony/: reactNativeCamera.har  rn_camera.har
harmony/reactNativeCamera/: BuildProfile.ets  LICENSE  NOTICE  README.OpenSource  index.ets  oh-package.json5  ts.ts
harmony/reactNativeCamera/src/main/: module.json5
harmony/reactNativeCamera/src/main/cpp/: CMakeLists.txt  ComponentDescriptors.h  EventEmitters.cpp  EventEmitters.h  FaceNativeTurboModule.cpp  FaceNativeTurboModule.h  NativeCameraComponentDescriptor.h  NativeCameraEventEmitRequestHandler.h  NativeCameraJSIBinder.h  NativeCameraPackage.h  Props.cpp  Props.h  RNCCameraModule.cpp  RNCCameraModule.h  ShadowNodes.cpp  ShadowNodes.h  States.cpp  States.h
harmony/reactNativeCamera/src/main/ets/: FaceDectorPackage.ts  FaceDectorTurboModule.ts  ReactCameraView.ets  ReactNativeCameraPackage.ts  ReactNativeCameraTurboModule.ts
harmony/reactNativeCamera/src/main/ets/core/: CameraConfig.ts  (+2 more)
harmony/rn_camera/: Index.ets  oh-package.json5  ts.ts
harmony/rn_camera/src/main/: module.json5
harmony/rn_camera/src/main/cpp/: CMakeLists.txt  RNCameraPackage.h
harmony/rn_camera/src/main/ets/: FaceDetectorModule.ts  RNCamera.ets  RNCameraPackage.ts  RNCameraTurboModule.ts
src/: FaceDetector.js  FaceDetector.ts  NativeCamera.ts  NativeCameraModule.ts  NativeFaceDetector.ts  RNCamera.js  RNCamera.tsx  index.js
src/spec/fabric/: RNCCameraNativeComponent.ts
src/spec/turbomodule/: NativeCameraTurboModule.ts  NativeFaceDetectorTurboModule.ts
(+15 files in other folders)
