cmake_minimum_required(VERSION 3.13)
set(CMAKE_VERBOSE_MAKEFILE on)
set(rnoh_native_camera_generated_dir "${RNOH_GENERATED_DIR}/react_native_harmony_native_camera")
file(GLOB rnoh_native_camera_SRC CONFIGURE_DEPENDS *.cpp)
add_library(rnoh_native_camera SHARED ${rnoh_native_camera_SRC})
target_include_directories(rnoh_native_camera PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(rnoh_native_camera PUBLIC rnoh)